--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "feathers-socketio": "^2.0.1",
     "lodash": "^4.17.4",
     "nuxt": "^1.0.0-rc3",
+    "serve": "^6.4.3",
     "simple-peer": "^8.1.1",
     "socket.io-client": "^2.0.4",
     "source-map-support": "^0.4.15",
